# Learned-Compressed-Rank-Select-TALG22

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  my_benchmark.cpp  run_all.sh  time_to_build.cpp
include/: arguments_parser.hpp  array.hpp  benchmark_utils.hpp  datasets_generation_utils.hpp  index_reader.hpp  la_vector_best_slope.hpp  la_vector_slope.hpp  slope_piecewise_linear_model.hpp  slope_utils.h  synthetic.hpp  wrapper_sdsl.hpp
include/ds2i/: global_parameters.hpp  index_types.hpp  indexed_sequence.hpp  optimal_partition.hpp  partitioned_sequence.hpp  segment_sequence.hpp  strict_sequence.hpp  uniform_partitioned_sequence.hpp  util.hpp
lib/: move_adapted_code.sh
lib/adapted_code/: csa_wt.hpp  la_vector.hpp  piecewise_linear_model.hpp
tests/: test.cpp
